# task-scheduler-system

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json
.github/workflows/: deploy.yml
api/: package-lock.json  package.json
api/src/: app.js
api/src/config/: database.js  logger.js  pubsub.js
api/src/controllers/: authController.js  executionController.js  taskController.js
api/src/middleware/: auth.js
api/src/models/: index.js
api/src/routes/: authRoutes.js  executionRoutes.js  taskRoutes.js
cpp-engine/: CMakeLists.txt
cpp-engine/include/core/: CronParser.h  MinHeapScheduler.h  Task.h
cpp-engine/include/patterns/: DesignPatterns.h
cpp-engine/src/: main.cpp
cpp-engine/src/core/: CronParser.cpp  MinHeapScheduler.cpp
cpp-engine/src/patterns/: DesignPatterns.cpp
infrastructure/docker/: Dockerfile.api  Dockerfile.cpp  Dockerfile.worker
infrastructure/gcp/: setup-gcp.sh
worker/: package-lock.json  package.json
worker/src/: worker.js
